# ibm-translation-client

./: LICENSE  README.md  pyproject.toml
src/ibm_translation_client/: __init__.py  main.py
